@@ -1,3 +1,7 @@
+2003-07-27  Carlos Perelló Marín <carlos@gnome.org>
+
+	* src/status-view.[ch]: Added the view object.
+
 2003-07-26  Carlos Perelló Marín <carlos@gnome.org>
 
 	* src/status-server.[ch]: Added, we will have only cvs server, but
